@@ -8,6 +8,7 @@
 -- ip defrag fixes
 -- refactored splitter fallback
 -- fix binder.use.service
+-- refactored flow state
 
 125
 -- discovered can't catch exceptions thrown from Lua to C++; need to
